codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__security_inspector__tests__pf_41_s01_inspector_blocked.snap
---
source: tui/src/bottom_pane/security_inspector_tests.rs
expression: "rendered.lines().take(8).collect::<Vec<_>>().join(\"\\n\")"
---
Security inspector (read only)
■ Blocked: security state unreadable: Aggressive and the kill switch apply
Observed 0s ago

Level
  Saved: Aggressive [configured: /security]
  Core config: Permissive [configured: config layers]
  [set] Active this run: Aggressive, every row verified at launch [resolved: launch check]
