codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__security_inspector__tests__pf_41_s01_inspector_degraded_stale.snap
---
source: tui/src/bottom_pane/security_inspector_tests.rs
expression: "render(&inspector(facts, stale_now), 100)"
---
Security inspector (read only)
▲ Aggressive degraded: status observed 2m ago; press r, Secretless launch, Model key broker, Live
policy, Output gate
Observed 120s ago: stale, press r

Level
  Saved: Aggressive [configured: /security]
  Core config: Permissive [configured: config layers]
  [set] Active this run: Aggressive, every row verified at launch [resolved: launch check]
  [unobserved] Live policy: not running for this session here (not started yet, or a remote app
      server); next start Aggressive [stored state]

This session
  [set] Sandbox: session value 0 [resolved: session config, checked at launch]
  [set] Approvals: session value 1 [resolved: session config, checked at launch]
  [set] Network: session value 2 [resolved: session config, checked at launch]
  [set] Vault: session value 3 [resolved: session config, checked at launch]
  [set] Model keys: session value 4 [resolved: session config]
  [set] Child agents: session value 5 [resolved: session config, checked at launch]
  [set] Sandbox backend: macOS Seatbelt [resolved: platform]
  [set] Egress destinations: proxy destination policy on (url_destination_policy) [resolved:
      features]

Runtime controls
  [degraded] Secretless launch: armed, but Core's process hardening failed: protected launches are
      refused [observed: this process]
  [off] Output gate: off (secret_output_gate) [observed: this process]
  [degraded] Model key broker: no broker is running; provider keys are not sent [observed: this
      process]
  [off] Credential broker: off (isolated_credential_broker) [resolved: features]
  [on] Untrusted content: labelled; session tainted (2 batches): protected actions need your fresh
      approval. Taint is kept with the conversation and stays on resume [observed: session]
  [set] Protected boundary: preflight clean at launch; earlier conversations are not resumed
      [resolved: launch preflight]

Grants
  Held: none: no live policy for this session [observed: Core policy]

Agents
  [set] Nested agents: refuse (default): agent commands that start `corbanu exec` or `review` are
      refused while Aggressive is enforced [configured: /security]

Not contained
  [not contained] MCP servers: docs run outside the OS sandbox with the environment allowlist;
      allowed because you configured or started it [resolved: config]
  [off] Hooks: off (codex_hooks) [resolved: features]
  [not contained] `!` shell commands: run outside the OS sandbox with the environment allowlist;
      allowed because you configured or started it [fixed]
  [not contained] App-server command/exec: runs outside the OS sandbox with the environment
      allowlist; allowed because you configured or started it [fixed]

Not available
  [not available] Screened search routing: not available in this build (PF-32) [fixed]
  [not available] Brokered browser login: not available in this build (PF-37) [fixed]
  [not available] Quarantine: not available in this build (PF-34) [fixed]
  [not available] Agent Sweep: not available in this build (PF-40) [fixed]

Recent denials
  None: nothing refused in this process [observed: this process]
↑/↓ scroll · r refresh · esc back to /security
